# DiRICHAnalysis

./: CMakeLists.txt  README.md  doxygen.conf
include/: CTSEvent.h  CTSEventClusters.h  CTSEventTracks.h  Cluster.h  Clusterer.h  Constants.h  LinkDef.h  Signal.h  Track.h  Tracker.h  Utility.h
macros/: convertToCTSEvents.C  convertToCTSEventsCluster.C  convertToCTSEventsTrack.C  fitCosmics.C  plotCTSEvents.C  plotTimeCalib.C  timeCalibration.C  timeCalibrationTuple.C
src/: CTSEvent.cxx  CTSEventTracks.cxx  Cluster.cxx  Clusterer.cxx  Track.cxx  Tracker.cxx  Utility.cxx
